add day2 task 1

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         },
         "files": [
             "src/Puzzle/Day1/basement.php",
-            "src/Puzzle/Day1/floor.php"
+            "src/Puzzle/Day1/floor.php",
+            "src/Puzzle/Day2/paperAmount.php"
         ]
     },
     "autoload-dev": {
