--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "files": [
             "src/Puzzle/Day1/basement.php",
             "src/Puzzle/Day1/floor.php",
-            "src/Puzzle/Day2/paperAmount.php"
+            "src/Puzzle/Day2/paper.php"
         ]
     },
     "autoload-dev": {
