--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^7.0",
         "symfony/console": "^3.0",
-        "beberlei/assert": "^2.4"
+        "beberlei/assert": "^2.4",
+        "devster/ubench": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.1"
